Fixed overflowing of texts

--- a/CSS-Styles/body.css
+++ b/CSS-Styles/body.css
@@ -21,6 +21,7 @@ body {
   border: 1px solid black;
   width: auto;
   margin: auto 100px;
+  overflow: auto;
 }
 
 .intro {
